--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.0.5",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node-jose": "^2.1.1",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   }
